fixed glossary errors and footer jumping

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -354,7 +354,10 @@ html {
 }
 
 #root {
-    min-height: 100vh;
+    min-height: 100dvh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: minmax(0, 1fr);
 }
 
 .smaller-text {
